--- a/index.css
+++ b/index.css
@@ -22,20 +22,23 @@ nav {
     width: 60%;
     height: 95vh;
     display: flex;
-    display: none;
     position: fixed;
     color: #e03e53;
     background: white;
-    padding-right: 0.5em;
     flex-direction: column;
 }
 span#close {
+    padding: 0.5em;
     color: #e03e53;
-    text-align: right;
     font-weight: bold;
     font-size: x-large;
+    align-self: flex-end;
+}
+p#more_eagler {
+    display: none;
 }
 nav li {
+    padding: 0.5em;
     list-style: none;
     font-weight: bold;
     text-align: center;
@@ -130,26 +133,6 @@ footer {
     background: #e03e53;
     justify-content: center;
 }
-ul#menu {
-    gap: 0.5em;
-    padding: 0;
-    display: flex;
-    color: white;
-    list-style: none;
-    margin-right: 20px;
-    justify-content: space-between;
-}
-ul#menu li {
-    align-self: center;
-}
-ul#menu li:hover {
-    padding: 0.5em;
-    cursor: pointer;
-    color: #e03e53;
-    font-weight: bold;
-    font-size: larger;
-    background: rgba(225,225,225,0.7);
-}
 section.services {
     margin-top: 95vh;
 }
@@ -172,6 +155,9 @@ section.about_body h1 {
 }
 span.space {
     margin-left: 10px;
+}
+div#specialisation {
+    display: none;
 }
 div#specialisation,
 section.people_body {
@@ -242,9 +228,14 @@ dt::before {
     font-size: x-large;
     display: inline-block;
 }
-@media only screen and (max-width: 480px){
-    ul#menu {
+@media only screen and (max-width: 480px) {
+    nav {
         display: none;
+    }
+}
+@media only screen and (min-width: 481px) and (max-width: 600px){
+    nav {
+        font-size: small;
     }
 }
 @media only screen and (min-width: 481px){
@@ -254,23 +245,37 @@ dt::before {
     div#overlay h5 {
         font-size: 1rem;
     }
-    span#menu {
+    span#menu,
+    span#close {
         display: none;
     }
-    
+   nav {
+        top: auto;
+        right: 20px;
+        color: white;
+        align-self: center; 
+        width: fit-content;
+        flex-direction: row;
+        height: fit-content;
+        background: #e03e53;
+        justify-content: space-between;    
+    }
+    nav li:hover {
+        color: #e03e53;
+        background: rgba(225,225,225,0.7);
+    }
 }
 @media only screen and (min-width: 600px){
     body {
         font-size: 18px;
     }
-    ul#menu {
-        gap: 1em;
+    nav li {
+        font-size: 16px;
     }
     #logo {
         max-width: 150px;
     }
-    div#services_title {
-        
+    div#services_title { 
         justify-content: space-around;
     }
 }
