Activate nav links and hide navbar when redirected to selected page

--- a/index.css
+++ b/index.css
@@ -27,6 +27,10 @@ nav {
     background: white;
     flex-direction: column;
 }
+nav a {
+    color: inherit;
+    text-decoration: none;
+}
 span#close {
     padding: 0.5em;
     color: #e03e53;
