--- a/index.css
+++ b/index.css
@@ -84,11 +84,11 @@ div#overlay {
     justify-content: center;
     background-color: rgba(225,225,225,0.8);
 }
-section#landing_section {
+section.landing_section {
     top: 20vh;
     height: 75vh;
     position: absolute;
-    align-self: center;
+    /* align-self: center; */
 }
 span.color {
     color: #e03e53;
@@ -281,5 +281,37 @@ dt::before {
     }
     div#services_title { 
         justify-content: space-around;
+    }
+    section.landing_section {
+        width: 100%;
+        display: flex;
+    }
+    div#overlay {
+        height: 100%;
+        display: flex;
+        padding: 1em;
+        color: #e03e53;
+        position: static;
+        width: fit-content; 
+        text-align: center;
+        box-sizing: border-box;
+        flex-direction: column;
+        justify-content: center;
+        background-color: rgba(225,225,225,0.8);
+    }
+    img.justice_image {
+        width: 100%;
+        height: 100%;
+        display: block;
+        max-width: 100%;
+        object-fit: cover;
+    }
+    @media only screen and (min-width: 992px){
+        div#overlay h2 {
+            font-size: 2.5rem;
+        }
+        div#overlay h5 {
+            font-size: 1.5rem;
+        }
     }
 }
