--- a/index.css
+++ b/index.css
@@ -211,7 +211,7 @@ div.services_body  {
     padding-bottom: 1em;
 }
 div#specialisation ul {
-    list-style-type: circle;
+    list-style-type: disc;
 }
 div#specialisation ul li::marker {
     color:#e03e53;
@@ -392,7 +392,6 @@ div.people_content {
         width: 45%;
     } 
     div.specifics {
-        /* gap: 1em; */
         display: flex;
     }
     div.specifics p {
