--- a/index.css
+++ b/index.css
@@ -354,6 +354,7 @@ input[type="submit"]{
 input[type="submit"] {
     color: white;
     font-weight: bold;
+    cursor: not-allowed;
     background: #DF3E53;
 }
 
