--- a/index.css
+++ b/index.css
@@ -357,6 +357,9 @@ div.services_body {
     padding-top: 1em;
     flex-direction: column;
 }
+div.services_body dl {
+    margin: 0;
+}
 
 /* media queries */
 @media only screen and (min-width: 481px){
